{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 8,
  "lineage": "ac6e76d3-70f8-d3a1-2ffc-dc3a15fc552c",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a0563489-aea6-4114-9eb6-e4a3ff177756/resourceGroups/resource_group_name/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "location": "uksouth",
            "name": "aks-nsg",
            "resource_group_name": "resource_group_name",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a0563489-aea6-4114-9eb6-e4a3ff177756/resourceGroups/resource_group_name/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/kube-apiserver-rule",
            "name": "kube-apiserver-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "resource_group_name",
            "source_address_prefix": "192.168.1.240",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks-nsg",
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a0563489-aea6-4114-9eb6-e4a3ff177756/resourceGroups/resource_group_name/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/ssh-rule",
            "name": "ssh-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "resource_group_name",
            "source_address_prefix": "192.168.1.240",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks-nsg",
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "worker-node-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a0563489-aea6-4114-9eb6-e4a3ff177756/resourceGroups/resource_group_name/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/worker-node-subnet",
            "name": "worker-node-subnet",
            "resource_group_name": "resource_group_name",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking",
            "module.networking.azurerm_virtual_network.aks-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8dffdd2a-15da-435d-b14a-ad51d38533ee",
            "id": "/subscriptions/a0563489-aea6-4114-9eb6-e4a3ff177756/resourceGroups/resource_group_name/providers/Microsoft.Network/virtualNetworks/aks-vnet",
            "location": "uksouth",
            "name": "aks-vnet",
            "resource_group_name": "resource_group_name"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    }
  ]
}